Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe 4 Matrix</title>
+    <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="design.css">
 </head>
 <body bgcolor="pink">
@@ -35,4 +35,5 @@
     
     <script src="style.js"></script>
 </body>
+
 </html>
